# dlopen_bug

./: CMakeLists.txt  README.md  app.cpp  compile_external.sh  external_lib.cpp
test_project/: cool.cpp  cool.h
